Jumping menu fix

--- a/frontend/styles/_navigation.sass
+++ b/frontend/styles/_navigation.sass
@@ -1,8 +1,9 @@
 header
-	@apply bg-gray-200 z-50
+	@apply bg-gray-200 sticky top-0 z-50 w-full
+	transition: all .3s
+
 	&.scrolled
-		@apply shadow-xl sticky top-0 w-full
-		transition: all .3s
+		@apply shadow-xl
 
 	nav
 		@apply flex justify-between items-center
